--- a/views/message.handlebars
+++ b/views/message.handlebars
@@ -20,11 +20,14 @@
     <div style="padding: 10px;">
         <h3>{{message}}</h3>
         <br/>
-        <label>ID: {{payment.id}}</label>
+        <label>Payment Id: {{payment_id}}</label>
         <br/>
-        <label>External Reference: {{payment.external_reference}}</label>
+        <label>External Reference: {{external_reference}}</label>
         <br/>
-        <label>merchant_order_id: {{payment.merchant_order_id}}</label>
+        <label>Merchant Order Id: {{merchant_order_id}}</label>
+        <br/>
+        <label>Preference Id: {{preference_id}}</label>
+        <br/>
+        <label>Payment Type: {{payment_type}}</label>
     </div>
 </div>
-   
